Apply OpenRewrite Java 17 migrations