@@ -1,18 +1,15 @@
 package io.jenkins.plugins.analysis.core.util;
 
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Optional;
-
 import org.junit.jupiter.api.Test;
 import org.junitpioneer.jupiter.Issue;
 
 import edu.hm.hafner.analysis.Severity;
 
+import java.util.HashSet;
+import java.util.Optional;
+import java.util.Set;
+
 import hudson.model.Job;
-import hudson.util.ComboBoxModel;
-import hudson.util.ListBoxModel;
-import hudson.util.ListBoxModel.Option;
 
 import io.jenkins.plugins.util.JenkinsFacade;
 
@@ -30,32 +27,32 @@ import static org.mockito.Mockito.*;
 class ModelValidationTest {
     @Test
     void doFillMinimumPriorityItemsShouldBeNotEmpty() {
-        ModelValidation model = new ModelValidation();
-        ListBoxModel allFilters = model.getAllSeverityFilters();
+        var model = new ModelValidation();
+        var allFilters = model.getAllSeverityFilters();
 
         assertThat(allFilters.size()).isEqualTo(Severity.getPredefinedValues().size());
 
-        Option actualErrorOption = allFilters.get(0);
+        var actualErrorOption = allFilters.get(0);
         assertThat(actualErrorOption.value).isEqualTo(Severity.ERROR.getName());
         assertThat(actualErrorOption.name).isEqualTo(Messages.SeverityFilter_Error());
 
-        Option actualHighOption = allFilters.get(1);
+        var actualHighOption = allFilters.get(1);
         assertThat(actualHighOption.value).isEqualTo(Severity.WARNING_HIGH.getName());
         assertThat(actualHighOption.name).isEqualTo(Messages.SeverityFilter_High());
 
-        Option actualNormalOption = allFilters.get(2);
+        var actualNormalOption = allFilters.get(2);
         assertThat(actualNormalOption.value).isEqualTo(Severity.WARNING_NORMAL.getName());
         assertThat(actualNormalOption.name).isEqualTo(Messages.SeverityFilter_Normal());
 
-        Option actualLowOption = allFilters.get(3);
+        var actualLowOption = allFilters.get(3);
         assertThat(actualLowOption.value).isEqualTo(Severity.WARNING_LOW.getName());
         assertThat(actualLowOption.name).isEqualTo(Messages.SeverityFilter_Low());
     }
 
     @Test
     void doFillTrendChartOptions() {
-        ModelValidation model = new ModelValidation();
-        ListBoxModel allFilters = model.getAllTrendChartTypes();
+        var model = new ModelValidation();
+        var allFilters = model.getAllTrendChartTypes();
 
         assertThat(allFilters).hasSize(TrendChartType.values().length);
     }
@@ -65,7 +62,7 @@ class ModelValidationTest {
         JenkinsFacade jenkins = mock(JenkinsFacade.class);
         when(jenkins.getAllJobNames()).thenReturn(new HashSet<>());
 
-        ModelValidation model = new ModelValidation(jenkins);
+        var model = new ModelValidation(jenkins);
 
         assertThat(model.getAllJobs()).containsExactly(NO_REFERENCE_JOB);
     }
@@ -74,9 +71,9 @@ class ModelValidationTest {
     void doCheckReferenceJobShouldBeOkWithValidValues() {
         JenkinsFacade jenkins = mock(JenkinsFacade.class);
         Job<?, ?> job = mock(Job.class);
-        String jobName = "referenceJob";
+        var jobName = "referenceJob";
         when(jenkins.getJob(jobName)).thenReturn(Optional.of(job));
-        ModelValidation model = new ModelValidation(jenkins);
+        var model = new ModelValidation(jenkins);
 
         assertThat(model.validateJob(jobName)).isOk();
         assertThat(model.validateJob(NO_REFERENCE_JOB)).isOk();
@@ -85,10 +82,10 @@ class ModelValidationTest {
 
     @Test
     void doCheckReferenceJobShouldBeNOkWithInvalidValue() {
-        String referenceJob = "referenceJob";
+        var referenceJob = "referenceJob";
         JenkinsFacade jenkins = mock(JenkinsFacade.class);
         when(jenkins.getJob(referenceJob)).thenReturn(Optional.empty());
-        ModelValidation model = new ModelValidation(jenkins);
+        var model = new ModelValidation(jenkins);
 
         assertThat(model.validateJob(referenceJob))
                 .isError()
@@ -97,7 +94,7 @@ class ModelValidationTest {
 
     @Test
     void doCheckHealthyShouldBeOkWithValidValues() {
-        ModelValidation model = new ModelValidation();
+        var model = new ModelValidation();
 
         assertThat(model.validateHealthy(1, 2)).isOk();
         assertThat(model.validateUnhealthy(1, 2)).isOk();
@@ -114,7 +111,7 @@ class ModelValidationTest {
     @Test
     @Issue("JENKINS-55293")
     void doCheckHealthyShouldBeNotOkWithInvalidValues() {
-        ModelValidation model = new ModelValidation();
+        var model = new ModelValidation();
 
         assertThat(model.validateHealthy(-1, 0))
                 .isError().hasMessage(Messages.FieldValidator_Error_NegativeThreshold());
@@ -141,8 +138,8 @@ class ModelValidationTest {
     @Test
     void shouldContainEmptyJobPlaceHolder() {
         JenkinsFacade jenkins = mock(JenkinsFacade.class);
-        ModelValidation model = new ModelValidation(jenkins);
-        ComboBoxModel actualModel = model.getAllJobs();
+        var model = new ModelValidation(jenkins);
+        var actualModel = model.getAllJobs();
 
         assertThat(actualModel).hasSize(1);
         assertThat(actualModel).containsExactly(NO_REFERENCE_JOB);
@@ -152,13 +149,13 @@ class ModelValidationTest {
     void shouldContainSingleElementAndPlaceHolder() {
         JenkinsFacade jenkins = mock(JenkinsFacade.class);
         Job<?, ?> job = mock(Job.class);
-        String name = "Job Name";
+        var name = "Job Name";
         when(jenkins.getFullNameOf(job)).thenReturn(name);
-        when(jenkins.getAllJobNames()).thenReturn(Collections.singleton(name));
+        when(jenkins.getAllJobNames()).thenReturn(Set.of(name));
 
-        ModelValidation model = new ModelValidation(jenkins);
+        var model = new ModelValidation(jenkins);
 
-        ComboBoxModel actualModel = model.getAllJobs();
+        var actualModel = model.getAllJobs();
 
         assertThat(actualModel).hasSize(2);
         assertThat(actualModel).containsExactly(NO_REFERENCE_JOB, name);
